<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LibraryApp</string>
    <string name="login_title">로그인</string>
    <string name="register_title">회원가입</string>
    <string name="email_hint">이메일</string>
    <string name="password_hint">비밀번호</string>
    <string name="name_hint">이름</string>
    <string name="login_button">로그인</string>
    <string name="register_button">회원가입</string>
    <string name="no_account_prompt">계정이 없나요?</string>
    <string name="go_to_register">회원가입 하러가기</string>
    <string name="search_hint">도서명, 저자, ISBN으로 검색</string>
    <string name="menu_home">대출/예약</string>
    <string name="menu_search">검색</string>
    <string name="menu_account">내 정보</string>
    <string name="book_list_title">도서 목록</string>
    <string name="reserve_button">예약</string>
    <string name="borrow_button">대출</string>
    <string name="return_button">반납</string>
    <string name="cancel_reservation_button">예약 취소</string>
    <string name="admin_panel_title">관리자 승인</string>
    <string name="approve_button">승인</string>
    <string name="reject_button">거절</string>
    <string name="my_page_title">내 정보</string>
    <string name="logout">로그아웃</string>
    <string name="request_extension_button">연장 요청</string>
    <string name="book_detail_title">도서 상세</string>
    <string name="requested_label">요청 상태</string>
    <string name="status_reserved">예약됨</string>
    <string name="status_borrowed">대출중</string>
    <string name="status_available">대출가능</string>
</resources>
