<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.libraryapp.ui.home.HomeFragment"
        android:label="@string/menu_home">
        <action
            android:id="@+id/action_home_to_bookDetail"
            app:destination="@id/bookDetailBottomSheetDialog" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.libraryapp.ui.search.SearchFragment"
        android:label="@string/menu_search">
        <action
            android:id="@+id/action_search_to_bookDetail"
            app:destination="@id/bookDetailBottomSheetDialog" />
    </fragment>

    <fragment
        android:id="@+id/accountFragment"
        android:name="com.example.libraryapp.ui.account.AccountFragment"
        android:label="@string/menu_account" />

    <dialog
        android:id="@+id/bookDetailBottomSheetDialog"
        android:name="com.example.libraryapp.ui.book.BookDetailBottomSheetDialog"
        android:label="@string/book_detail_title"
        app:defaultNavHost="false" />

</navigation>
